move transformations to agent